--- a/app/src/main/res/layout/activity_search2.xml
+++ b/app/src/main/res/layout/activity_search2.xml
@@ -26,11 +26,11 @@
                 <com.google.android.material.tabs.TabItem
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="전종목"/>
+                    android:text="매수가능종목"/>
                 <com.google.android.material.tabs.TabItem
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="관심기업종목"/>
+                    android:text="관심기업(매수)"/>
             </com.google.android.material.tabs.TabLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
