--- a/app/src/main/res/menu/main_bottom_menu.xml
+++ b/app/src/main/res/menu/main_bottom_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/navigation_orders"
         android:icon="@drawable/ico_bt_menu_01"
-        android:title="주문현황"
+        android:title="주문"
         android:checked="false" />
 
     <item
