--- a/app/src/main/res/layout/list_item_ordered.xml
+++ b/app/src/main/res/layout/list_item_ordered.xml
@@ -13,9 +13,9 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_weight="2"
-            android:layout_width="wrap_content"
+            android:layout_width="40pt"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:orientation="vertical">
 
             <TextView
@@ -34,8 +34,8 @@
                 android:id="@+id/stockName2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
                 android:layout_marginLeft="16dp"
+                android:layout_marginTop="2dp"
                 android:layout_marginBottom="9dp"
                 android:ellipsize="end"
                 android:lineSpacingExtra="5sp"
@@ -44,29 +44,37 @@
                 android:textSize="13sp" />
 
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/count"
-            android:layout_width="64dp"
+        <LinearLayout
+            android:layout_width="30pt"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="right"
-            android:text="100,000,000"
-            android:textAlignment="textEnd"
-            android:textColor="#333333"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/price"
-            android:layout_width="109dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/count"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="100,000,000"
+                android:textColor="#333333"
+                android:textSize="14sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="30pt"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="right"
-            android:lineSpacingExtra="4sp"
-            android:text="100,000,000"
-            android:textAlignment="textEnd"
-            android:textColor="#000000"
-            android:textSize="14sp" />
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/price"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:lineSpacingExtra="4sp"
+                android:text="100,000,000"
+                android:textColor="#000000"
+                android:textSize="14sp" />
+        </LinearLayout>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
