34	김광식	APP	메뉴명이 'MyPage' 와 '마이페이지' 가 혼용하여 사용되고 있는데 통일되는 것이 좋을 듯

--- a/app/src/main/res/layout/fragment_navigation.xml
+++ b/app/src/main/res/layout/fragment_navigation.xml
@@ -310,7 +310,7 @@
                         android:textSize="14sp"
                         android:textColor="#333333"
                         android:lineSpacingExtra="4sp"
-                        android:text="My Page"/>
+                        android:text="마이페이지"/>
                     <ImageView
                         android:tag="more"
                         android:layout_width="24dp"
